--- a/corgi-protocol/Cargo.toml
+++ b/corgi-protocol/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "corgi-clusterctrl"
+name = "corgi-protocol"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
@@ -7,5 +7,3 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.13"
-rand = "0.8.3"
