--- a/corgi-clusterctrl/Cargo.toml
+++ b/corgi-clusterctrl/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3.13"
+futures = { version = "0.3.13" }
+tokio = { version = "1.4.0", features = ["full"]}
 rand = "0.8.3"
