--- a/corgi-cluster-bootstrapper/Cargo.toml
+++ b/corgi-cluster-bootstrapper/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "corgi-protocol"
+name = "corgi-cluster-bootstrapper"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+structopt = "0.3.13"
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0"
