--- a/corgi-proxy/Cargo.toml
+++ b/corgi-proxy/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "corgi-clusterctrl"
+name = "corgi-proxy"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-structopt = "0.3.13"
 futures = { version = "0.3.13" }
 tokio = { version = "1.4.0", features = ["full"]}
 rand = "0.8.3"
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0"
