--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [workspace]
 
 members = [
-  "corgi-cluster-bootstrapper",
-  "corgi-proxy",
-  "corgi-server",
-  "corgi-client"
+  "local-cluster-bootstrap",
+  "client",
+  "control-plane",
+  "server"  
 ]
 
