--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "corgi-cluster-bootstrapper"
+name = "client"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
@@ -8,5 +8,3 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3.13"
-serde = { version = "1.0.125", features = ["derive"] }
-serde_json = "1.0"
