--- a/local-cluster-bootstrap/Cargo.toml
+++ b/local-cluster-bootstrap/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "corgi-client"
+name = "corgi-cluster-bootstrap"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
@@ -8,3 +8,5 @@ edition = "2018"
 
 [dependencies]
 structopt = "0.3.13"
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0"
