--- a/control-plane/Cargo.toml
+++ b/control-plane/Cargo.toml
@@ -3,6 +3,7 @@ name = "corgi-proxy"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
+default-run= "control-plane"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
