--- a/local-cluster-bootstrap/Cargo.toml
+++ b/local-cluster-bootstrap/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "corgi-cluster-bootstrap"
+name = "corgi-local-cluster-bootstrap"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
+default-run= "local-cluster-bootstrap"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
