--- a/local-cluster-bootstrap/Cargo.toml
+++ b/local-cluster-bootstrap/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "corgi-local-cluster-bootstrap"
+name = "local-cluster-bootstrap"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
-default-run= "local-cluster-bootstrap"
+default-run= "corgi-local-cluster-bootstrap"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
