--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,16 +7,16 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in library 'corgi-cluster-bootstrapper'",
+            "name": "Debug unit tests in library 'local-cluster-bootstrap'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
                     "--lib",
-                    "--package=corgi-cluster-bootstrapper"
+                    "--package=local-cluster-bootstrap"
                 ],
                 "filter": {
-                    "name": "corgi-cluster-bootstrapper",
+                    "name": "local-cluster-bootstrap",
                     "kind": "lib"
                 }
             },
@@ -26,15 +26,15 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'corgi-cluster-bootstrapper'",
+            "name": "Debug executable 'corgi-local-cluster-bootstrap'",
             "cargo": {
                 "args": [
                     "build",
-                    "--bin=corgi-cluster-bootstrapper",
-                    "--package=corgi-cluster-bootstrapper"
+                    "--bin=corgi-local-cluster-bootstrap",
+                    "--package=local-cluster-bootstrap"
                 ],
                 "filter": {
-                    "name": "corgi-cluster-bootstrapper",
+                    "name": "corgi-local-cluster-bootstrap",
                     "kind": "bin"
                 }
             },
@@ -44,16 +44,72 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'corgi-cluster-bootstrapper'",
+            "name": "Debug unit tests in executable 'corgi-local-cluster-bootstrap'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=corgi-cluster-bootstrapper",
-                    "--package=corgi-cluster-bootstrapper"
+                    "--bin=corgi-local-cluster-bootstrap",
+                    "--package=local-cluster-bootstrap"
                 ],
                 "filter": {
-                    "name": "corgi-cluster-bootstrapper",
+                    "name": "corgi-local-cluster-bootstrap",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in library 'core'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--lib",
+                    "--package=core"
+                ],
+                "filter": {
+                    "name": "core",
+                    "kind": "lib"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug executable 'corgi-client'",
+            "cargo": {
+                "args": [
+                    "build",
+                    "--bin=corgi-client",
+                    "--package=client"
+                ],
+                "filter": {
+                    "name": "corgi-client",
+                    "kind": "bin"
+                }
+            },
+            "args": [],
+            "cwd": "${workspaceFolder}"
+        },
+        {
+            "type": "lldb",
+            "request": "launch",
+            "name": "Debug unit tests in executable 'corgi-client'",
+            "cargo": {
+                "args": [
+                    "test",
+                    "--no-run",
+                    "--bin=corgi-client",
+                    "--package=client"
+                ],
+                "filter": {
+                    "name": "corgi-client",
                     "kind": "bin"
                 }
             },
@@ -82,15 +138,15 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'corgi-proxy'",
+            "name": "Debug executable 'control-plane'",
             "cargo": {
                 "args": [
                     "build",
-                    "--bin=corgi-proxy",
+                    "--bin=control-plane",
                     "--package=corgi-proxy"
                 ],
                 "filter": {
-                    "name": "corgi-proxy",
+                    "name": "control-plane",
                     "kind": "bin"
                 }
             },
@@ -100,16 +156,16 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'corgi-proxy'",
+            "name": "Debug unit tests in executable 'control-plane'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=corgi-proxy",
+                    "--bin=control-plane",
                     "--package=corgi-proxy"
                 ],
                 "filter": {
-                    "name": "corgi-proxy",
+                    "name": "control-plane",
                     "kind": "bin"
                 }
             },
@@ -124,7 +180,7 @@
                 "args": [
                     "build",
                     "--bin=corgi-server",
-                    "--package=corgi-server"
+                    "--package=server"
                 ],
                 "filter": {
                     "name": "corgi-server",
@@ -143,47 +199,10 @@
                     "test",
                     "--no-run",
                     "--bin=corgi-server",
-                    "--package=corgi-server"
+                    "--package=server"
                 ],
                 "filter": {
                     "name": "corgi-server",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug executable 'corgi-client'",
-            "cargo": {
-                "args": [
-                    "build",
-                    "--bin=corgi-client",
-                    "--package=corgi-client"
-                ],
-                "filter": {
-                    "name": "corgi-client",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in executable 'corgi-client'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--bin=corgi-client",
-                    "--package=corgi-client"
-                ],
-                "filter": {
-                    "name": "corgi-client",
                     "kind": "bin"
                 }
             },
