--- a/local-cluster-bootstrap/Cargo.toml
+++ b/local-cluster-bootstrap/Cargo.toml
@@ -8,6 +8,7 @@ default-run= "corgi-local-cluster-bootstrap"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+core = { path = "../core" }
 structopt = "0.3.13"
 serde = { version = "1.0.125", features = ["derive"] }
 serde_json = "1.0"
