--- a/control-plane/Cargo.toml
+++ b/control-plane/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "corgi-proxy"
+name = "control-plane"
 version = "0.1.0"
 authors = ["suren <suren-m>"]
 edition = "2018"
-default-run= "control-plane"
+default-run= "corgi-control-plane"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
