--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dirs = "3.0.1" 
+dirs = "3.0.1"
+serde = { version = "1.0.125", features = ["derive"] }
+serde_json = "1.0" 
