--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -119,34 +119,15 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in library 'corgi-proxy'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--lib",
-                    "--package=corgi-proxy"
-                ],
-                "filter": {
-                    "name": "corgi-proxy",
-                    "kind": "lib"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug executable 'control-plane'",
+            "name": "Debug executable 'corgi-control-plane'",
             "cargo": {
                 "args": [
                     "build",
-                    "--bin=control-plane",
-                    "--package=corgi-proxy"
+                    "--bin=corgi-control-plane",
+                    "--package=control-plane"
                 ],
                 "filter": {
-                    "name": "control-plane",
+                    "name": "corgi-control-plane",
                     "kind": "bin"
                 }
             },
@@ -156,16 +137,16 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'control-plane'",
+            "name": "Debug unit tests in executable 'corgi-control-plane'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=control-plane",
-                    "--package=corgi-proxy"
+                    "--bin=corgi-control-plane",
+                    "--package=control-plane"
                 ],
                 "filter": {
-                    "name": "control-plane",
+                    "name": "corgi-control-plane",
                     "kind": "bin"
                 }
             },
