added local data file location for server

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,3 +8,4 @@ default-run= "corgi-server"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+core = { path="../core" }
